[package]
    name         = "stochastic_universal_sampling"
    version      = "1.1.2"
    edition      = "2021"
    rust-version = "1.66.1"
    description  = "The stochastic universal sampling algorithm for the rand crate."
    categories   = ["algorithms"]
    keywords     = ["random", "sampling"]
    authors      = ["David McDougall <dam1784@rit.edu>"]
    license      = "MIT-0"
    repository   = "https://github.com/D-McDougall/stochastic_universal_sampling.git"

[lib]
    doctest = false

[dependencies]
    rand = "0.10"
